--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --output-path dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
